# EldritchBevyJam

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml.bypass  release.yaml
assets/audio/: gun.flac
assets/environment_maps/: kloofendal_28d_misty_puresky_2k_diffuse.ktx2  kloofendal_28d_misty_puresky_2k_specular.ktx2
assets/models/: blood.gltf  exp.gltf
assets/models/guns/: lmg.gltf  lmg_bullet.gltf  lmg_bullet_jacket.gltf  muzzle_flash.gltf
src/: animated_fox.rs  animation.rs  audio.rs  character_controller.rs  fps_controller.rs  lib.rs  main.rs  menu.rs  mesh_assets.rs  minimal_kira_audio.rs  physics.rs  util.rs
src/audio/: mod.rs  spatial.rs
src/guns/: mod.rs
src/minimal_kira_audio/: flac_loader.rs  mod.rs  mp3_loader.rs  ogg_loader.rs
src/units/: fox_unit.rs  mod.rs  plum.rs  spider.rs
